tests/error/wasm_errors/wasm_type_mismatch.err
Error: Wasm signature mismatch (at $FILE:9:4)
  | 
7 | class Foo:
8 |     @wasm
9 |     def add(self: "Foo", x: int, y: int, z: int) -> int: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Signature of wasm function didn't match that in provided
  |                                                              wasm file

Note: Declared signature: (int, int, int) -> int

Note: Signature in wasm:  (int, int) -> int

Guppy compilation failed due to 1 previous error
